# FileBackup

./: CMakeLists.txt  Dockerfile  README.MD
src/: main.cpp
src/core/: BackupCore.cpp  BackupCore.h  Compress.cpp  Compress.h  Crypto.cpp  Crypto.h  Filter.cpp  Filter.h  PackUnpack.cpp  PackUnpack.h
src/ui/: MainWindow.cpp  MainWindow.h
test/: TestLz77.cpp  test.sh
test/test_backup_dir/code/: test_script.sh
test/test_backup_dir/docs/: test1.txt  test2.md
test/test_backup_dir/secret/: password.txt
test/test_backup_dir/tmp/: tmp.txt
